--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,28 +1,32 @@
-name: Pylint
+name: Build & Pylint
 
-on: [push]
+on:
+  pull_request:
+    branches:
+      - main
 
 jobs:
 
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.8", "3.9", "3.10"]
 
     steps:
     - uses: actions/checkout@v3
     
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python 3.11
       uses: actions/setup-python@v3
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.11
         
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pylint
-        
+
+    - name: Run migrate.py
+      run: |
+        python migrate.py
+
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
